--- a/src/components/radio/radio.css
+++ b/src/components/radio/radio.css
@@ -18,14 +18,9 @@
 
 .dc-radio__input {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  white-space: nowrap;
-  border: 0;
-  clip: rect(0, 0, 0, 0);
+  inset: 0;
+  appearance: none;
+  opacity: 0;
 }
 
 .dc-radio__check {
@@ -37,6 +32,7 @@
   width: var(--size);
   height: var(--size);
   vertical-align: middle;
+  pointer-events: none;
   background: var(--background);
   border: 1px solid var(--border-color);
   border-radius: 50%;
