--- a/src/components/switch/switch.css
+++ b/src/components/switch/switch.css
@@ -22,14 +22,9 @@
 
 .dc-switch__input {
   position: absolute;
-  width: 1px;
-  height: 1px;
-  padding: 0;
-  margin: -1px;
-  overflow: hidden;
-  white-space: nowrap;
-  border: 0;
-  clip: rect(0, 0, 0, 0);
+  inset: 0;
+  appearance: none;
+  opacity: 0;
 }
 
 .dc-switch__track,
@@ -38,6 +33,7 @@
   top: 0;
   left: 0;
   display: inline-block;
+  pointer-events: none;
 }
 
 .dc-switch__track {
